# pkg-libdrm

./: configure.ac  meson.build  meson_options.txt  xf86drm.h
debian/: changelog  control  rules
debian/patches/: 0001-Add-ARM-support-into-xf86arm.h.patch  libdrm-2.4.100-vivante.patch  series
vivante/: meson.build
